--- a/public_html/package.json
+++ b/public_html/package.json
@@ -1,43 +1,44 @@
 {
-  "name": "dewwwald",
-  "description": "Portfolio website for dewald",
+  "name": "angular-quickstart",
   "version": "1.0.0",
   "scripts": {
-    "start": "npm run lite & npm run builder",
-    "lite": "lite-server -c bs-config.json",
+    "start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
+    "lite": "lite-server",
     "postinstall": "typings install",
-    "builder": "tsc && concurrently && npm run tsc:w",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "typings": "typings"
   },
-  "license": "ISC",
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/angular/angular.io/blob/master/LICENSE"
+    }
+  ],
   "dependencies": {
-    "@angular/common": "^2.0.0-rc.4",
-    "@angular/compiler": "^2.0.0-rc.4",
-    "@angular/core": "^2.0.0-rc.4",
-    "@angular/forms": "0.2.0",
-    "@angular/http": "2.0.0-rc.4",
-    "@angular/platform-browser": "^2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.4",
-    "@angular/platform-server": "2.0.0-rc.4",
-    "@angular/router": "^3.0.0-beta.2",
-    "@angular/upgrade": "2.0.0-rc.4",
-    "angular2-in-memory-web-api": "0.0.14",
-    "core-js": "^2.4.0",
-    "ng2-charts": "^1.1.0",
-    "ng2-page-scroll": "^1.2.1",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "^5.0.0-beta.10",
-    "systemjs": "0.19.27",
-    "zone.js": "^0.6.12"
+    "@angular/common": "~2.1.0",
+    "@angular/compiler": "~2.1.0",
+    "@angular/core": "~2.1.0",
+    "@angular/forms": "~2.1.0",
+    "@angular/http": "~2.1.0",
+    "@angular/platform-browser": "~2.1.0",
+    "@angular/platform-browser-dynamic": "~2.1.0",
+    "@angular/router": "~3.1.0",
+    "@angular/upgrade": "~2.1.0",
+    "angular-in-memory-web-api": "~0.1.5",
+    "bootstrap": "^3.3.7",
+    "core-js": "^2.4.1",
+    "reflect-metadata": "^0.1.8",
+    "rxjs": "5.0.0-beta.12",
+    "systemjs": "0.19.39",
+    "zone.js": "^0.6.25",
+    "ng2-page-scroll": "3.1.6"
   },
   "devDependencies": {
-    "angular2-google-maps": "^0.12.0",
-    "concurrently": "^2.0.0",
-    "lite-server": "^2.2.0",
-    "symbol-observable": "^1.0.1",
-    "typescript": "^1.8.10",
-    "typings": "^1.0.4"
+    "concurrently": "^3.0.0",
+    "lite-server": "^2.2.2",
+    "typescript": "^2.0.3",
+    "typings":"^1.4.0"
   }
 }
+
