--- a/public_html/package.json
+++ b/public_html/package.json
@@ -32,7 +32,8 @@
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.39",
     "zone.js": "^0.6.25",
-    "ng2-page-scroll": "3.1.6"
+    "ng2-page-scroll": "3.2.1",
+    "angular2-google-maps": "0.16.0"
   },
   "devDependencies": {
     "concurrently": "^3.0.0",
